--- a/css/style.css
+++ b/css/style.css
@@ -557,7 +557,16 @@
     line-height: .9375rem;
 }
 
-.plan-features .plan-row-1 {
+.plan-features {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: var(--size-10);
+}
+
+.plan-features .plan-row-1,
+.plan-features .plan-row-2 {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -565,12 +574,15 @@
     gap: .625rem;
 }
 
-.plan-row-1 .plan-feature-Item {
+.plan-row-1 .plan-feature-Item,
+.plan-row-2 .plan-feature-Item {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding: var(--size-20);
     gap: var(--size-20);
+    width: 16.4375rem;
+    height: 15.0625rem;
 }
 
 .plan-feature-Item .item-content {
